Change new hashmap to set.of